@@ -1,3 +1,8 @@
+2019-06-09  Morten Welinder  <terra@gnome.org>
+
+	* goffice/utils/go-format.c (go_format_has_year)
+	(go_format_has_month) (go_format_has_day): new functions.
+
 2019-06-07  Jean Brefort  <jean.brefort@normalesup.org>
 
 	* goffice/gtk/go-math-editor.c (go_math_editor_class_init): fix signals to
